--- a/index.html
+++ b/index.html
@@ -535,11 +535,36 @@
             </div>
             <div class="game-content">
                 <div class="color-codes">
-                    <div class="color-code" data-shape="triangle">🔺 = Pink</div>
-                    <div class="color-code" data-shape="rectangle">🔷 = Blue</div>
-                    <div class="color-code" data-shape="circle">🟡 = Yellow</div>
-                    <div class="color-code" data-shape="oval">🔴 = Red</div>
-                    <div class="color-code" data-shape="square">🟢 = Green</div>
+                    <div class="color-code" data-shape="triangle">
+                        <svg width="30" height="30" class="code-shape">
+                            <polygon points="15,5 25,20 5,20" fill="#ff69b4" stroke="black" stroke-width="1"/>
+                        </svg>
+                        = Pink
+                    </div>
+                    <div class="color-code" data-shape="rectangle">
+                        <svg width="30" height="30" class="code-shape">
+                            <rect x="5" y="8" width="20" height="14" fill="#4169e1" stroke="black" stroke-width="1"/>
+                        </svg>
+                        = Blue
+                    </div>
+                    <div class="color-code" data-shape="circle">
+                        <svg width="30" height="30" class="code-shape">
+                            <circle cx="15" cy="15" r="10" fill="#ffd700" stroke="black" stroke-width="1"/>
+                        </svg>
+                        = Yellow
+                    </div>
+                    <div class="color-code" data-shape="oval">
+                        <svg width="30" height="30" class="code-shape">
+                            <ellipse cx="15" cy="15" rx="12" ry="8" fill="#ff4444" stroke="black" stroke-width="1"/>
+                        </svg>
+                        = Red
+                    </div>
+                    <div class="color-code" data-shape="square">
+                        <svg width="30" height="30" class="code-shape">
+                            <rect x="7" y="7" width="16" height="16" fill="#32cd32" stroke="black" stroke-width="1"/>
+                        </svg>
+                        = Green
+                    </div>
                 </div>
                 <div class="helicopter-canvas">
                     <svg viewBox="0 0 400 300" class="helicopter-svg">
